2023-12-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-show2-intro): added a section for Arch Linux.

	* eev-tlinks.el (find-pacman-links): new function.

	* eev-plinks.el (find-telegachat-msgc, ee-telegachat-msg0)
	(ee-telegachat-msgc): new functions.
	(find-telegachatm): new alias.

2023-12-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-homebrew-links): new function.
	(ee-find-telegachat-links): added several entries.

2023-12-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (show2-use, find-show2-use)
	(ee-show2-do-with-fname0, ee-show2-use): new functions.
	(code-show2, find-code-show2, ee-code-show2): deleted.

	* eev-intro.el (find-show2-intro): added more sections.

	* eev-videolinks.el (ee-all-cs-with-subs, code-lsubs)
	(find-code-lsubs, ee-code-lsubs, code-all-lsubs)
	(find-code-all-lsubs, ee-code-all-lsubs): new functions.

	* eev-tlinks.el (find-angg-es-links): added a definition for
	`find-anggfile'.

2023-12-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev.el: bumped the version.

	* eev-tlinks.el (find-luatb0, find-luatb): new functions.

	* eev-intro.el (find-show2-intro): new function.
	(find-eev-intro): added an entry for `(find-show2-intro)'.

	* eev-tlinks.el (code-brappend, find-code-brappend)
	(ee-code-brappend): new functions.

2023-12-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): added an indication
	that the video "eev2023repls" (now) has subtitles.

2023-12-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-testblocks.el (ee-insert-test-makefile-gmake-mode)
	(ee-insert-test-makefile-mode): change the "^#T " to "^#T ?".

2023-12-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-show2-links, show2): new functions.

2023-12-05  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-maximamsg-links, ee-find-maximamsg-links)
	(find-maximamsg): new functions.

	* eepitch.el (eepitch-this-line): added the argument `debug'.